manifests/homeops/esphome/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: esphome
  namespace: homeops
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: esphome
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: homeassist
    - from:
        - namespaceSelector: {}
      ports:
        - port: 6052
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 80
        - port: 443
