manifests/homeops/esphome/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: esphome
  namespace: homeops
spec:
  endpointSelector:
    matchLabels:
      app: esphome
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "6052"        
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "6052"
  # # ICMP ping can only be enabled via some feature flag. Don't need it that badly
  # # Revisit if its ever added to base Cilium
  # egress:
  #   - toEndpoints:
  #       - matchLabels:
  #           io.kubernetes.pod.namespace: kube-system
  #           k8s-app: kube-dns
  #     toPorts:
  #       - ports:
  #           - port: "53"
  #             protocol: UDP
  #         rules:
  #           dns:
  #             - matchPattern: "*"
  #   - toEntities:
  #       - world
  #     toPorts:
  #       - ports:
  #           - port: "443"
  #       - ports:
  #           - port: "80"
  #   - toCIDRSet:
  #       - cidr: 192.168.1.0/24
  #     toPorts:
  #       - ports:
  #           - port: "8266"
  #       - ports:
  #           - port: "6053"
  #   - icmps:
  #     - fields:
  #       - type: "8"
  #         family: IPv4
